--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -111,8 +111,10 @@
 {%- endif -%}
 
 <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
-  <symbol id="icon-search" viewbox="0 0 18 19" fill="none">
-    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.03 11.68A5.784 5.784 0 112.85 3.5a5.784 5.784 0 018.18 8.18zm.26 1.12a6.78 6.78 0 11.72-.7l5.4 5.4a.5.5 0 11-.71.7l-5.41-5.4z" fill="currentColor"/>
+  <symbol id="icon-search" viewbox="0 0 24 24" fill="none">
+    <rect width="24" height="24" fill="black"/>
+    <rect x="19.0938" y="16.9746" width="7.82099" height="3" rx="1.5" transform="rotate(45 19.0938 16.9746)" fill="white"/>
+    <circle cx="11.5" cy="11.5" r="10" stroke="white" stroke-width="3"/>
   </symbol>
 
   <symbol id="icon-reset" class="icon icon-close"  fill="none" viewBox="0 0 18 18" stroke="currentColor">
