--- a/snippets/icon-cart-empty.liquid
+++ b/snippets/icon-cart-empty.liquid
@@ -1,4 +1,4 @@
-<svg
+{% comment %} <svg
   class="icon icon-cart-empty"
   aria-hidden="true"
   focusable="false"
@@ -7,4 +7,16 @@
   fill="none"
 >
   <path d="m15.75 11.8h-3.16l-.77 11.6a5 5 0 0 0 4.99 5.34h7.38a5 5 0 0 0 4.99-5.33l-.78-11.61zm0 1h-2.22l-.71 10.67a4 4 0 0 0 3.99 4.27h7.38a4 4 0 0 0 4-4.27l-.72-10.67h-2.22v.63a4.75 4.75 0 1 1 -9.5 0zm8.5 0h-7.5v.63a3.75 3.75 0 1 0 7.5 0z" fill="currentColor" fill-rule="evenodd"/>
+</svg> {% endcomment %}
+
+<svg class="icon icon-cart-empty"
+  aria-hidden="true"
+  focusable="false"
+  xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 24 24"
+  fill="none">
+<rect width="24" height="24" fill="black"/>
+<path d="M1.76943 10.062C1.73212 9.76359 1.96481 9.5 2.26556 9.5H21.7344C22.0352 9.5 22.2679 9.76359 22.2306 10.062L20.7306 22.062C20.6993 22.3122 20.4866 22.5 20.2344 22.5H3.76556C3.5134 22.5 3.3007 22.3122 3.26943 22.062L1.76943 10.062Z" stroke="white" stroke-width="3"/>
+<path d="M7.69646 8.78743C7.54071 9.11903 7.78268 9.5 8.14902 9.5H15.851C16.2173 9.5 16.4593 9.11903 16.3035 8.78743L13.0157 1.78743C12.9333 1.61201 12.7569 1.5 12.5631 1.5H11.4369C11.2431 1.5 11.0667 1.61201 10.9843 1.78743L7.69646 8.78743Z" stroke="white" stroke-width="3"/>
 </svg>
+
