--- a/snippets/icon-hamburger.liquid
+++ b/snippets/icon-hamburger.liquid
@@ -4,7 +4,12 @@
   focusable="false"
   class="icon icon-hamburger"
   fill="none"
-  viewBox="0 0 18 16"
+  viewBox="0 0 24 24"
 >
-  <path d="M1 .5a.5.5 0 100 1h15.71a.5.5 0 000-1H1zM.5 8a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1A.5.5 0 01.5 8zm0 7a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1a.5.5 0 01-.5-.5z" fill="currentColor">
+  <rect width="24" height="24" fill="black"/>
+  <rect width="14.001" height="3" rx="1.5" fill="white"/>
+  <rect y="10.5" width="24" height="3" rx="1.5" fill="white"/>
+  <rect y="21" width="24" height="3" rx="1.5" fill="white"/>
 </svg>
+
+
