--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -17,7 +17,7 @@
     >
       <span>
         <svg class="modal__toggle-open icon icon-search" aria-hidden="true" focusable="false">
-          <use href="#icon-search">
+          <use href="#icon-search-header">
         </svg>
         <svg class="modal__toggle-close icon icon-close" aria-hidden="true" focusable="false">
           <use href="#icon-close">
