--- a/snippets/icon-close.liquid
+++ b/snippets/icon-close.liquid
@@ -4,11 +4,9 @@
   focusable="false"
   class="icon icon-close"
   fill="none"
-  viewBox="0 0 26 26"
+  viewBox="0 0 18 17"
 >
-  <rect width="24" height="24" transform="translate(1 1)" fill="black"/>
-  <rect x="2.51562" y="0.335938" width="32.7437" height="3.07966" rx="1.53983" transform="rotate(45 2.51562 0.335938)" fill="white"/>
-  <rect width="32.7437" height="3.07966" rx="1.53983" transform="matrix(-0.707107 0.707107 0.707107 0.707107 23.4883 0.335938)" fill="white"/>
+  <path d="M.865 15.978a.5.5 0 00.707.707l7.433-7.431 7.579 7.282a.501.501 0 00.846-.37.5.5 0 00-.153-.351L9.712 8.546l7.417-7.416a.5.5 0 10-.707-.708L8.991 7.853 1.413.573a.5.5 0 10-.693.72l7.563 7.268-7.418 7.417z" fill="currentColor">
 </svg>
 
 
