--- a/snippets/country-localization.liquid
+++ b/snippets/country-localization.liquid
@@ -34,9 +34,8 @@
     aria-describedby="{{ localPosition }}Label"
   >
     <span>
-      {{- localization.country.name }} |
-      {{ localization.country.currency.iso_code }}
-      {{ localization.country.currency.symbol -}}
+      {{- localization.country.name }}  |  
+      <span class="currency">{{ localization.country.currency.iso_code }}</span>
     </span>
     {% render 'icon-caret' %}
   </button>
