--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -105,6 +105,7 @@ details[open].menu-opening > .menu-drawer__submenu {
   color: #fff;
   text-transform: uppercase;
   line-height: 100% !important;
+  font-family: var(--font-heading-family);
 }
 
 .menu-drawer summary.menu-drawer__menu-item {
@@ -116,7 +117,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 .menu-drawer__close-button:focus,
 .menu-drawer__menu-item:hover,
 .menu-drawer__close-button:hover {
-  color: rgb(var(--color-foreground));
+  color: #fff;
   background-color: rgba(var(--color-foreground), 0.04);
 }
 
