--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -50,6 +50,13 @@
   .list-menu--inline {
     display: inline-flex;
     flex-wrap: wrap;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 990px) {
+    .list-menu--inline {
+      gap: 0.8rem;
+    }
   }
 
   summary.list-menu__item {
