--- a/assets/base.css
+++ b/assets/base.css
@@ -126,8 +126,8 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 @media screen and (min-width: 990px) {
   .header:not(.drawer-menu).page-width {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .page-width--narrow {
@@ -2059,8 +2059,8 @@ input[type='checkbox'] {
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
-  color: rgb(var(--color-button-text));
+  background-color: #fff;
+  color: #000;
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 100%;
@@ -2069,8 +2069,9 @@ input[type='checkbox'] {
   align-items: center;
   font-size: 0.9rem;
   bottom: 0.8rem;
-  left: 2.2rem;
+  left: 1.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
+  font-family: var(--font-heading-family);
 }
 
 /* utility-bar */
@@ -2531,11 +2532,27 @@ input[type='checkbox'] {
   vertical-align: middle;
 }
 
+@media screen and (min-width: 990px){
+  .header__icon .icon{
+    height: 1.6rem;
+    width: 1.6rem;
+  }
+}
+
 .header__icon,
 .header__icon--cart .icon {
   height: 2.4rem;
   width: 2.4rem;
   padding: 0;
+}
+
+
+@media screen and (min-width: 990px){
+  .header__icon,
+  .header__icon--cart .icon{
+    height: 1.6rem;
+    width: 1.6rem;
+  }
 }
 
 .header__icon--cart {
@@ -2557,8 +2574,16 @@ input[type='checkbox'] {
   --shop-avatar-size: 2.8rem;
 }
 
+
 account-icon {
   display: flex;
+}
+
+@media screen and (min-width: 990px) {
+  .header__icon.header__icon--account{
+    display: none;
+  }
+  
 }
 
 /* Search */
@@ -2762,23 +2787,31 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  padding: 1.2rem;
+  padding: 1.2rem 0.6rem;
   text-decoration: none;
   color: #fff;
+  text-transform: uppercase;
+  font-family: var(--font-heading-family) !important;
 }
 
 .header__menu-item:hover {
   color: rgb(var(--color-foreground));
+  background-color: #fff;
+  padding: 0.6rem;
+  color: #000;
+  border-radius: 4px;
+  text-decoration: none !important;
 }
+
 
 .header__menu-item span {
   transition: text-decoration var(--duration-short) ease;
 }
 
-.header__menu-item:hover span {
+/* .header__menu-item:hover span {
   text-decoration: underline;
   text-underline-offset: 0.3rem;
-}
+} */
 
 details[open] > .header__menu-item {
   text-decoration: underline;
@@ -2793,10 +2826,13 @@ details[open] > .header__menu-item .icon-caret {
 }
 
 .header__active-menu-item {
-  transition: text-decoration-thickness var(--duration-short) ease;
-  color: rgb(var(--color-foreground));
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  color: #000;
+}
+
+.header__active-menu-link{
+  background-color: #fff;
+  padding: 0.6rem;
+  border-radius: 4px;
 }
 
 .header__menu-item:hover .header__active-menu-item {
