--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -11,8 +11,8 @@
   }
 
   .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+    padding-top: {{ section.settings.padding_top }}px;
+    padding-bottom: {{ section.settings.padding_bottom }}px;
   }
 
   @media screen and (min-width: 750px) {
@@ -68,7 +68,7 @@
           >
             {%- for block in section.blocks -%}
               <div
-                class="footer-block grid__item{% if block.type == 'link_list' %} footer-block--menu{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+                class="footer-block grid__item{% if block.type == 'link_list' %} footer-block--menu{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %} {% if block.type == 'text' %}footer-block--text{% endif %} {% if block.type == 'button' %}footer-block--button{% endif %}"
                 {{ block.shopify_attributes }}
                 {% if settings.animations_reveal_on_scroll %}
                   data-cascade
@@ -83,9 +83,21 @@
                   {%- when '@app' -%}
                     {% render block %}
                   {%- when 'text' -%}
-                    <div class="footer-block__details-content rte">
-                      {{ block.settings.subtext }}
-                    </div>
+                    {%- if block.settings.subtext_1 != blank -%}
+                      <div class="footer-block__details-content rte">
+                        {{ block.settings.subtext_1 }}
+                      </div>
+                    {%- endif -%}
+                    {%- if block.settings.subtext_2 != blank -%}
+                      <div class="footer-block__details-content rte">
+                        {{ block.settings.subtext_2 }}
+                      </div>
+                    {%- endif -%}
+                    {%- if block.settings.subtext_3 != blank -%}
+                      <div class="footer-block__details-content rte">
+                        {{ block.settings.subtext_3 }}
+                      </div>
+                    {%- endif -%}
                   {%- when 'link_list' -%}
                     {%- if block.settings.menu != blank -%}
                       <ul class="footer-block__details-content list-unstyled">
@@ -153,7 +165,24 @@
                         {{ 'image' | placeholder_svg_tag: 'placeholder-svg placeholder' }}
                       {%- endif -%}
                     </div>
-                {%- endcase -%}
+                    {%- when 'link' -%}
+                  {%- when 'button' -%}
+                    <style>
+                     .footer-block__button::before {
+                        content: "{{ block.settings.eyebrow }}";
+                        display: block;
+                        font-size: 0.75rem;
+                        font-weight: 600;
+                        margin-bottom: 0.5rem;
+                      }
+                    </style> 
+                    <a
+                      href="{{ block.settings.url }}"
+                      class="footer-block__button"
+                    >
+                      {{ block.settings.label }}
+                    </a>
+                  {%- endcase -%}
               </div>
             {%- endfor -%}
           </div>
@@ -204,7 +233,7 @@
                       id="Subscribe"
                       aria-label="{{ 'newsletter.button_label' | t }}"
                     >
-                      {% render 'icon-arrow' %}
+                      {% render 'icon-arrow-newsletter' %}
                     </button>
                   </div>
                   {%- if form.errors -%}
@@ -296,7 +325,6 @@
         <small class="copyright__content"
           >&copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
         </small>
-        <small class="copyright__content">{{ powered_by_link }}</small>
         {%- if section.settings.show_policy -%}
           <ul class="policies list-unstyled">
             {%- for policy in shop.policies -%}
@@ -374,7 +402,19 @@
         },
         {
           "type": "richtext",
-          "id": "subtext",
+          "id": "subtext_1",
+          "default": "t:sections.footer.blocks.text.settings.subtext.default",
+          "label": "t:sections.footer.blocks.text.settings.subtext.label"
+        },
+         {
+          "type": "richtext",
+          "id": "subtext_2",
+          "default": "t:sections.footer.blocks.text.settings.subtext.default",
+          "label": "t:sections.footer.blocks.text.settings.subtext.label"
+        },
+         {
+          "type": "richtext",
+          "id": "subtext_3",
           "default": "t:sections.footer.blocks.text.settings.subtext.default",
           "label": "t:sections.footer.blocks.text.settings.subtext.label"
         }
@@ -418,6 +458,33 @@
             }
           ],
           "default": "center"
+        }
+      ]
+    },
+    {
+      "type": "button",
+      "name": "t:sections.footer.blocks.button.name",
+      "settings": [
+        {
+          "type": "inline_richtext",
+          "id": "heading",
+          "default": "t:sections.footer.blocks.button.settings.heading.default",
+          "label": "t:sections.footer.blocks.button.settings.heading.label"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "t:sections.footer.blocks.button.settings.url.label"
+        }, 
+        {
+          "type": "text",
+          "id": "eyebrow",
+          "label": "t:sections.footer.blocks.button.settings.eyebrow.label"
+        },
+        {
+          "type": "text",
+          "id": "label",
+          "label": "t:sections.footer.blocks.button.settings.label.name"
         }
       ]
     }
