--- a/assets/component-list-social.css
+++ b/assets/component-list-social.css
@@ -22,6 +22,10 @@
   color: rgb(var(--color-foreground));
 }
 
+.footer .list-social__link {
+  padding: 0 1.1rem;
+}
+
 .utility-bar .list-social__link {
   padding: 0 0.8rem;
   height: 3.8rem;
