--- a/assets/component-newsletter.css
+++ b/assets/component-newsletter.css
@@ -21,6 +21,14 @@
 
 .newsletter-form__field-wrapper .field__input {
   padding-right: 5rem;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 12px;
+  color: #fff;
+}
+
+.newsletter-form__field-wrapper .field__label {
+  color: #fff;
 }
 
 .newsletter-form__field-wrapper .field {
@@ -49,6 +57,8 @@
   top: 0;
   height: 100%;
   z-index: 2;
+  padding: 14px 24px 14px 4px;
+  padding-right: 24px;
 }
 
 .newsletter-form__button:focus-visible {
