--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -1,5 +1,6 @@
 .footer {
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  background: #000;
 }
 
 .footer:not(.color-scheme-1) {
@@ -18,7 +19,7 @@
 
   .footer-block.grid__item {
     padding: 0;
-    margin: 4rem 0;
+    /* margin: 4rem 0; */
     width: 100%;
   }
 
@@ -27,9 +28,9 @@
   }
 
   .footer__content-top {
-    padding-bottom: 3rem;
-    padding-left: calc(4rem / var(--font-body-scale));
-    padding-right: calc(4rem / var(--font-body-scale));
+    padding-bottom: 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 
@@ -52,6 +53,7 @@
 .footer__content-bottom-wrapper {
   display: flex;
   width: 100%;
+  color: #fff;
 }
 
 @media screen and (max-width: 749px) {
@@ -150,9 +152,14 @@
 }
 
 .footer-block__heading {
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   margin-top: 0;
   font-size: calc(var(--font-heading-scale) * 1.6rem);
+  text-transform: uppercase;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 130% !important;
+  color: #fff;
 }
 
 @media screen and (min-width: 990px) {
@@ -176,7 +183,7 @@
 }
 
 .footer-block__newsletter {
-  text-align: center;
+  text-align: left;
   flex-grow: 1;
 }
 
@@ -226,11 +233,11 @@
     because they will be stacked.
    */
   .footer-block--newsletter {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     flex: 1 1 100%;
     align-items: center;
-    gap: 3rem;
+    gap: 3rem; */
   }
 
   .footer__list-social.list-social,
@@ -238,6 +245,10 @@
   .footer-block__newsletter {
     display: flex;
     justify-content: center;
+  }
+
+  .footer-block__newsletter {
+    justify-content: flex-start;
   }
 
   .footer-block__newsletter {
@@ -292,7 +303,7 @@
 
 .footer__copyright {
   text-align: center;
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -313,7 +324,11 @@
 }
 
 .footer-block__details-content {
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
+}
+
+.footer-block__details-content.footer-block-image{
+  margin-bottom: 2rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -402,7 +417,7 @@
 }
 
 .footer-block__image-wrapper {
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
   overflow: hidden !important;
 }
 
@@ -435,9 +450,7 @@
 }
 
 .footer-block__brand-info .footer__list-social.list-social {
-  justify-content: flex-start;
-  margin-left: -1.3rem;
-  margin-right: -1.3rem;
+  justify-content: center;
 }
 
 .footer-block__details-content .placeholder-svg {
@@ -507,4 +520,123 @@
       padding-left: 3rem;
     }
   }
+}
+
+/* New footer style */
+
+.footer-block.grid__item.footer-block--text,
+.footer-block.grid__item.footer-block--button{
+  border-top: 1px solid #fff;
+  margin-top: 2rem;
+  padding-top: 2rem;
+}
+
+.footer-block.grid__item.footer-block--text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  column-gap: 10px;
+}
+
+.footer-block.grid__item .footer-block__heading,
+.footer-block.grid__item .footer-block__details-content.rte,
+.footer-block.grid__item .footer-block__details-content.rte h1,
+.footer-block.grid__item .footer-block__details-content.rte h2,
+.footer-block.grid__item .footer-block__details-content.rte h3,
+.footer-block.grid__item .footer-block__details-content.rte h4,
+.footer-block.grid__item .footer-block__details-content.rte h5,
+.footer-block.grid__item .footer-block__details-content.rte h6,
+.footer-block.grid__item .footer-block__details-content.rte a{
+  color: #fff;
+}
+
+.footer-block.grid__item .footer-block__heading{
+  width: 100%;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte,
+.footer-block.grid__item .footer-block__details-content.rte h1,
+.footer-block.grid__item .footer-block__details-content.rte h2,
+.footer-block.grid__item .footer-block__details-content.rte h3,
+.footer-block.grid__item .footer-block__details-content.rte h4,
+.footer-block.grid__item .footer-block__details-content.rte h5,
+.footer-block.grid__item .footer-block__details-content.rte h6,
+.footer-block.grid__item .footer-block__details-content.rte a{
+  font-family: var(--font-body-family);
+}
+
+
+.footer-block.grid__item .footer-block__details-content.rte p{
+  margin: 0;
+  font-size: 1.6rem;
+  line-height: 125%;
+  font-weight: 500;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte p strong{
+  font-size: 2.1rem;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte h6{
+  font-size: 1.3rem;
+  opacity: 0.6;
+  margin-bottom: 8px;
+  margin-top: 20px;
+  text-transform: uppercase;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte a{
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #fff !important;
+  margin: 0;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte a:hover{
+  text-decoration: underline;
+}
+
+.footer-block.grid__item .footer-block__details-content.rte ul{
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 15px;
+}
+
+
+.footer-block.grid__item .footer-block__details-content.rte ul li{
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 125%;
+}
+
+.footer-block--newsletter .footer-block__heading{
+  margin-bottom: 2rem;
+}
+
+.footer-block__button{
+  display: block;
+  width: 100%;
+  height: 63px;
+  background: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 12px;
+  position: relative;
+}
+
+.footer-block__button::after{
+  content: "";
+  width: 9px;
+  height: 16px;
+  background-image: url('data:image/svg+xml,<svg width="9" height="17" viewBox="0 0 9 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.74999 0.634046C1.35088 0.233964 0.703796 0.233964 0.304685 0.634046C-0.0944261 1.03413 -0.0944258 1.68279 0.304685 2.08287L6.53937 8.33273L0.298906 14.5884C-0.100205 14.9885 -0.100205 15.6371 0.298906 16.0372C0.698017 16.4373 1.3451 16.4373 1.74421 16.0372L8.69531 9.0692C8.92118 8.84277 9.01923 8.53672 8.98943 8.24117C8.97176 8.00527 8.87295 7.77433 8.69298 7.59393L1.74999 0.634046Z" fill="white"/></svg>');
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 24px;
+  top: 50%;
+  transform: translateY(-50%);
 }
