--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -738,7 +738,7 @@
     opacity: 1;
     font-size: 1.6rem;
     margin-bottom: 0;
-    text-transform: capitalize;
+    text-transform: none;
   }
 
   .footer-block.grid__item .footer-block__details-content.rte h6{
