--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -116,6 +116,7 @@
 
       :root {
         --font-body-family: "neue_haas_regular";
+        --font-body-family-medium: "neue_haas_medium";
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
