--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -681,6 +681,14 @@
                       disabled
                     {% endif %}
                   >
+                  <div id="price-{{ section_id }}" role="status" {{ block.shopify_attributes }}>
+                    {%- render 'price',
+                      product: card_product,
+                      use_variant: true,
+                      show_badges: true,
+                      price_class: 'price--large'
+                    -%}
+                  </div>
 
                   <quantity-input class="quantity cart-quantity">
                     <button class="quantity__button" name="minus" type="button">
