--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -14,6 +14,7 @@
   <variant-selects
     id="variant-selects-{{ section.id }}"
     data-section="{{ section.id }}"
+    class="variant-wrapper"
     {{ block.shopify_attributes }}
   >
     {%- for option in product.options_with_values -%}   
