changed arrow on filter

--- a/snippets/icon-caret.liquid
+++ b/snippets/icon-caret.liquid
@@ -1,3 +1,9 @@
-<svg aria-hidden="true" focusable="false" class="icon icon-caret" viewBox="0 0 10 6">
+{% comment %} <svg aria-hidden="true" focusable="false" class="icon icon-caret" viewBox="0 0 10 6">
   <path fill-rule="evenodd" clip-rule="evenodd" d="M9.354.646a.5.5 0 00-.708 0L5 4.293 1.354.646a.5.5 0 00-.708.708l4 4a.5.5 0 00.708 0l4-4a.5.5 0 000-.708z" fill="currentColor">
+</svg> {% endcomment %}
+
+
+<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" class="icon icon-caret" >
+<path fill-rule="evenodd" clip-rule="evenodd" d="M11.6128 6.72382C12.0021 6.33541 12.0021 5.70567 11.6128 5.31726C11.2234 4.92885 10.5921 4.92885 10.2028 5.31726L6.00458 9.50528L1.79978 5.31069C1.40931 4.92117 0.776245 4.92117 0.38578 5.31069C-0.00468543 5.70021 -0.00468451 6.33174 0.38578 6.72126L5.2844 11.608C5.48651 11.8096 5.75362 11.9069 6.01843 11.8998C6.27118 11.898 6.52338 11.8009 6.71622 11.6085L11.6128 6.72382Z" fill="black"/>
 </svg>
+
